# WAVE_3DTx

./: .gitignore  CMakeLists.txt  main.cpp  nemain.cpp
common/: Dwave.cpp  Dwave.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
include/: CMakeLists.txt
shader/: backface.frag  firstPass.vert  raycasting.frag  secondPass.frag  secondPass.vert  secondPassCCMed.frag  secondPassCleanData.frag  secondPassCropCylinder.frag  secondPassHSVSurface.frag  secondPassMeanFiltering.frag  secondPassMedianFiltering.frag  secondPassNearestNeighbourHSVFusion.frag  secondPassSoebel.frag
